# tinker-rl-lab

./: .env.example  .gitignore  0xsero_tweets.json  ACM_CHECKLIST.md  ARTIFACT.md  BASELINES.md  BENCHMARKS_COMPARISON.md  COMPUTE.md  CONTRIBUTING.md  Dockerfile  ELEVATION_ROADMAP.md  EVAL_PROTOCOL.md  FIGURE_PROVENANCE.md  LICENSE  LIMITATIONS_AND_IMPACT.md  NEURIPS_CHECKLIST.md  README.md  REPRODUCE.md  REVIEWER_VERIFICATION.md  SOURCE_PRECEDENCE.md  TURNITIN_REPORT_ACKNOWLEDGED.txt  VERSION.json  abstract_scope_audit.py  add_figures.py  advanced_rl_colab.ipynb  anonymization_repro_audit.py  autoresearch-dashboard.md  autoresearch.checks.sh  autoresearch.config.json  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  autoresearch_config_audit.py  autoresearch_score.sh  blind_review_export_audit.py  blind_review_package_audit.py  capstone_claim_audit.py  claim_strength_audit.py  export_guard_audit.py  (+42 more)
ai-scientist-template/: README.md  WRITEUP.md  experiment.py  plot.py  prompt.json  requirements.txt  seed_ideas.json
ai-scientist-v2/: README.md  bfts_config.override.yaml  experiment_contract.md  tinker_rl_lab_topic.md
atropos/: .gitignore  CLAIM_SUPPORT_EXPERIMENTS.md  eval_reasoning_suite.py  generate_slides.py  launch_training.py  pyproject.toml  requirements_unsloth.txt  run_all_experiments.sh  run_claim_support_evals.sh  run_claim_support_train.sh  run_claim_support_vast.sh  run_experiment.sh  run_experiment_generic.sh  run_logp_steering.sh  run_pending_experiments.sh  run_stats.py  serve.py  slides_8th_call.md  train_grpo_humaneval.py  train_grpo_unsloth.py  transcript_8th_call.md
blind_review/: anonymize_code.py  anonymize_paper.py
capstone-literature-survey/: README.md  chapter2_foundation.tex  foundation_chapter.tex  references.bib  section2_7_peft.tex  section_2_10_infrastructure_rl_training.tex  section_2_2_rlhf.tex  section_2_3_ppo.tex  section_2_4_dpo.tex  section_2_5_grpo.tex  section_2_6_deepseek_r1.tex  section_2_8_mathematical_reasoning_benchmarks.tex  section_2_9_related_work_rl_reasoning.tex
doc/: 0xsero_tweets.json.html  README.md.html  doc-filelist.js  run_coding.sh.html  run_one.sh.html  scientific_audit.py.html  vast_run.sh.html
experiments/: .gitignore  RALPH_PLAN.md  (+40 more)
(+810 files in other folders)
